[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pydiet"
version = "0.1.0"
description = "CFHT's Direct Imaging Exposure Time calculator"
authors = [
    {name = "Emmanuel Bertin", email = "bertin@cfht.hawaii.edu"},
]
keywords = ["astronomy", "CFHT", "imaging"]
readme = "README.md"
license = {text = "MIT"}
license_files = ["LICENSE"]
data_files = ["config/pydiet.conf"]
dependencies = [
    "astropy >= 5.0",
    "fastapi >= 0.74",
    "jinja2 >= 3.1.2",
    "numpy >= 1.19",
    "pydantic == 1.*",
    "setuptools",
    "uvicorn[standard] >= 0.18"
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.optional-dependencies]
test = [
    "mypy",
    "pytest-cov"
]
doc = [
    "sphinx >= 5.3.0"
    "sphinx-rtd-theme >= 1.2",
    "sphinxcontrib-bibtex >= 2.4.0",
    "sphinx-js >= 3.2.1"
]

[project.scripts]
pydiet = "pydiet.cmd.start:main"

[project.urls]
Repository = "https://github.com/ebertin/pydiet"
Homepage = "https://www.cfht.hawaii.edu"
Documentation = "https://ebertin.github.io/pydiet"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source_pkgs = ["pydiet"]
command_line = "-m pytest tests"

