[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pydiet"
version = "0.1.0"
description = "CFHT's Direct Imaging Exposure Time calculator"
authors = [
    {name = "Emmanuel Bertin", email = "bertin@cfht.hawaii.edu"},
]
keywords = ["astronomy", "CFHT", "imaging"]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "astropy >= 5.0",
    "fastapi >= 0.74",
    "jinja2 >= 3.1.2",
    "numpy >= 1.19",
    "pydantic >= 2.2",
    "setuptools",
    "uvicorn[standard] >= 0.30"
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.optional-dependencies]
test = [
    "mypy",
    "pytest-cov"
]
doc = [
    "sphinx >= 7.0",
    "sphinx-rtd-theme >= 1.2",
    "sphinxcontrib-bibtex >= 2.4.0",
    "sphinx-js >= 3.2.2"
]

[project.scripts]
pydiet = "pydiet.cmd.start:main"

[project.urls]
Repository = "https://github.com/ebertin/pydiet"
Homepage = "https://www.cfht.hawaii.edu"
Documentation = "https://ebertin.github.io/pydiet"

[tool.pdm.build]
excludes = [
    "src/pydiet/client/node_modules",
    "src/pydiet/doc/doctrees"
]

[tool.pdm.scripts]
doc.cmd = "make inline"
doc.working_dir = "docs"
mypy = "mypy src"
pre_build = {composite = ["doc", "mypy"]}
pre_install = {composite = ["doc", "mypy"]}

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source_pkgs = ["pydiet"]
command_line = "-m pytest tests"

